--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/appletouch.svg" />
+    <link rel="shortcut icon", href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon", type='image/png' href="%PUBLIC_URL%/favicon_16x16.png" sizes='16x16' />
+    <link rel="icon", type='image/png' href="%PUBLIC_URL%/favicon_32x32.png" sizes='32x32' />
+    <meta property='og:title' content='Клаудмил — дизайн и разработка для e-commerce / ритейл / fmcg / промышленности.' />
+    <meta name='description' content='с 2009 года выступаем партнером роста и масштабирования бизнеса в цифровой среде. Разрабатываем интернет-магазины, сервисы и приложения.' />
+    <meta property='og:image' content='%PUBLIC_URL%/opengraph.jpg' />
+    <title>Клаудмил — дизайн и разработка для e-commerce / ритейл / fmcg / промышленности.</title>
   </head>
   <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
