--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon", href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon", type='image/png' href="%PUBLIC_URL%/favicon_16x16.png" sizes='16x16' />
     <link rel="icon", type='image/png' href="%PUBLIC_URL%/favicon_32x32.png" sizes='32x32' />
+    <!-- <link rel="preload" href="%PUBLIC_URL%/pt-root-ui_bold.woff" as='font' /> -->
     <meta property='og:title' content='Клаудмил — дизайн и разработка для e-commerce / ритейл / fmcg / промышленности.' />
     <meta name='description' content='с 2009 года выступаем партнером роста и масштабирования бизнеса в цифровой среде. Разрабатываем интернет-магазины, сервисы и приложения.' />
     <meta property='og:image' content='%PUBLIC_URL%/opengraph.jpg' />
